2008-08-24  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	patch by: Haakon Sporsheim <hakon.sporsheim@tandberg.com>

	* configure.ac:
	* sys/Makefile.am:
	* sys/winscreencap/Makefile.am:
	* sys/winscreencap/gstdx9screencapsrc.c:
	* sys/winscreencap/gstdx9screencapsrc.h:
	* sys/winscreencap/gstgdiscreencapsrc.c:
	* sys/winscreencap/gstgdiscreencapsrc.h:
	* sys/winscreencap/gstwinscreencap.c:
	* sys/winscreencap/gstwinscreencap.h:
	  New plugin: winscreencap (#463941).

2008-08-22  Michael Smith <msmith@songbirdnest.com>

	* sys/dshowdecwrapper/gstdshowaudiodec.c:
	  Flip mpeg1/mpeg2 arrays for mpeg audio. Detect which type the audio
	  is correctly, instead of backwards. No functional changes, since this
	  mistake was completely self-consistent.

2008-08-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	  Add, but commented out xml/element-dc1394.xml. Its documented, but
	  I can't get it to be build.

	* ext/celt/gstceltdec.c:
	* ext/celt/gstceltenc.c:
	  Fix doc warnings and reformat the doc block.

2008-08-21  Stefan Kost  <ensonic@users.sf.net>

	patch by: Leandro Melo de Sales <leandroal@gmail.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/gst-plugins-bad-plugins.signals:
	* docs/plugins/inspect/plugin-dccp.xml:
	* gst/dccp/Makefile.am:
	* gst/dccp/gstdccp.c:
	* gst/dccp/gstdccp.h:
	* gst/dccp/gstdccpclientsink.c:
	* gst/dccp/gstdccpclientsink.h:
	* gst/dccp/gstdccpclientsrc.c:
	* gst/dccp/gstdccpclientsrc.h:
	* gst/dccp/gstdccpplugin.c:
	* gst/dccp/gstdccpserversink.c:
	* gst/dccp/gstdccpserversink.h:
	* gst/dccp/gstdccpserversrc.c:
	* gst/dccp/gstdccpserversrc.h: