@@ -257,6 +257,7 @@ AG_GST_CHECK_PLUGIN(mpegvideoparse)
 AG_GST_CHECK_PLUGIN(mve)
 AG_GST_CHECK_PLUGIN(nsf)
 AG_GST_CHECK_PLUGIN(nuvdemux)
+AG_GST_CHECK_PLUGIN(pcapparse)
 AG_GST_CHECK_PLUGIN(rawparse)
 AG_GST_CHECK_PLUGIN(real)
 AG_GST_CHECK_PLUGIN(rtpmanager)
@@ -1268,6 +1269,7 @@ gst/mpegvideoparse/Makefile
 gst/mve/Makefile
 gst/nsf/Makefile
 gst/nuvdemux/Makefile
+gst/pcapparse/Makefile
 gst/rawparse/Makefile
 gst/rtpmanager/Makefile
 gst/sdp/Makefile
